--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^9.1.2"
   }
